<resources>
    <string name="app_name">Amovie</string>
    <string name="setting">Setting</string>
    <string name="bottom_menu_movies">Movies</string>
    <string name="bottom_menu_tvshow">TV Show</string>

    <string name="releasedate">Release Date</string>
    <string name="runningtime">Running Time</string>
    <string name="description">Overview</string>
    <string name="detailfilm">Detail Film</string>

    <string name="field_title">Title</string>
    <string name="field_vote">Rating</string>
    <string name="title_movies">Movie</string>
    <string name="title_tv_shows">Tv Show</string>
    <string name="data_language">en-US</string>


    <string name="bottom_menu_favorite">Favorite</string>
    <string name="reload_data">Reload</string>
    <string name="title_favorite">Favorite</string>
    <string name="error_no_network_connection">No Connection Network</string>
    <string name="not_available">Not Available</string>
    <string name="favorite_add_success">add success</string>
    <string name="favorite_remove_success">remove success</string>
    <string name="poster">Movie Poster</string>
    <string name="copy_right">Copyright</string>
</resources>
