<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movies">
    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.erwin2687.amovie.fragments.MovieFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movie_frament" />

    <fragment
        android:id="@+id/navigation_tvshows"
        android:name="com.erwin2687.amovie.fragments.TvShowFragment"
        android:label="@string/title_tv_shows"
        tools:layout="@layout/fragment_movie_frament" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.erwin2687.amovie.fragments.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>